chapter5 5.9 note